@@ -1,3 +1,5 @@
+- partionning:
+  o GPT: prevent geometry issue on last partition (mga#18666, mga#17796)
 - recognize new kernel-4.7 drivers
 - try to get patch from ext[2-4] removable media instead of just ext2
 
