@@ -1,3 +1,5 @@
+- diskdrake:
+  o GPT: prevent geometry issue on last partition (mga#18666, mga#17796)
 - recognize new kernel-4.7 drivers
 
 Version 17.48 - 4 July 2016
